# course_work_5

./: .gitignore  README.md  main.py  pyproject.toml
hh_vacancies_data/: employers.json  vacancies.json
src/: DBManager.py  JSON_processor.py  employer.py  functions.py  vacancies_API.py  vacancy.py
