[tool.poetry]
name = "course-work-5"
version = "0.1.0"
description = ""
authors = ["helen597 <helen597597@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
